munin (CVS)

  * Node: Added support for optional "user" settings in node.
  * Plugins: Fix autoconf for linux/{nfsd,nfs_client}.

munin (1.2.2)

  * Plugins: Correct history loss in linux/{df,df_inode}.
  * Plugins: Avoid negative spike in generic/exim_mailstats.

munin (1.2.1)
  * Main: fix the file vs. pipe check in munin-limits.
  * Main: place the munin-limits lock file in rundir, not dbdir.
  * Main: Make sure all rrd-tunes are correct after an upgrade (Deb#296454,
    Deb#296645).
  * Main: Better handling of broken connections (Deb#298108).
  * Main: HTML cleanup (Deb#296676).
  * Main: Re-enable width/height attributes to img tags.
  * Main: Escape regexps more properly (Deb#296575).
  * Main: Correct expires-headers in CGI output (SF#1159742).
  * Node: munin-node-configure now properly respect user plugins.
  * Plugin: generic/amavis now has configurable logfile location (Deb#296533).
  * Plugin: linux/irqstats should no longer fail on some systems (Deb#296452).
  * Plugin: modified graph_args of generic/apache_processes, to work around
    an rrdtool bug (Deb#296528).
  * Plugins: All plugins using logtail now properly detect its format
    (Deb#297628).
  * Plugins: sunos/memory repaired (SF#1143610).
  * Plugins: Made linux/if_ work with more versions of iwlist (SF#1150954).
  * Plugins: generic/mailman now handles regular mailman (Deb#297904).
  * Plugins: New contrib plugin generic/mbmon_ from Arne Schwabe.
  * Plugins: Made linux/df work properly with tmpfs and devmapper (Deb#298442).
  * Plugins: Thanks to Stephen Gran, generic/exim_mailstats now graphs rejects
    (Deb#295799).
  * Docs: Fixed erronous cgiurl docs (SF#1159722).

munin (1.2.0)

  * Main: Yet another rewrite of munin-limits open call (SF#1115434).
  * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
  * Plugins: linux/if* now treats ra* interfaces as wireless.
  * Plugins: minor bugfix in generic/bind9.